...
    <string name="Delete">Delete</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- names for Buttons and spinners-->
    <string name="Quick_Route">Quick Route</string>
    <string name="schedule_route">Schedule Route</string>
    <string name="Favorite_List">Favorites List</string>
    <string name="View_Favorites">View Favorites</string>
    <string name="Add_Favorite">Add to Favorites</string>
    <string name="Start_Building">Start Building</string>
    <string name="Destination_Building">Destination</string>
    <string name="Get_Route">Get Route</string>
    <string name="Back">Back</string>
    <string name="View_day">View Day</string>
    <string name="Delete_route">Delete Route</string>
    <string name="Add_route">Add Route</string>
    <string name="Add">Add</string>
    <string name="view_all">View All</string>
    <string name="clear_all">Clear All</string>
    <string name="configure">Configure</string>


...
