...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/button_GoToSR"
        android:layout_width="96dp"
        android:layout_height="70dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="232dp"
        android:contentDescription="@string/schedule_route"
...
